# quick_hull

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Line2d.h  Line2d.inl  Vector2d.h  Vector2d.inl  main.cpp  quickhull.cpp  quickhull.h  quickhull.inl
src/ui/: Helper.cpp  Helper.h  Widget.cpp  Widget.h  Window.cpp  Window.h  main.cpp
test/: CMakeLists.txt  test_line2d.cpp  test_vector2d.cpp
